--- a/processors/src/main/resources/application.yml
+++ b/processors/src/main/resources/application.yml
@@ -7,24 +7,24 @@ spring.cloud.stream:
     binder:
       brokers:
         - localhost:9092
-#      configuration:
-#        schema:
-#          registry:
-#            url: http://localhost:8081
-#    streams:
-#      binder:
-#        configuration:
-#          application:
-#            id: event-broker-api
-#          schema:
-#            registry:
-#              url: http://localhost:8081
-#    bindings:
-#      eventEntityProcessor-in-0:
-#        consumer:
-#          configuration:
-#            value.deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
-#            schema.registry.url: http://localhost:8081
+      configuration:
+        schema:
+          registry:
+            url: http://localhost:8081
+    streams:
+      binder:
+        configuration:
+          application:
+            id: event-broker-processor
+          schema:
+            registry:
+              url: http://localhost:8081
+    bindings:
+      eventEntityProcessor-in-0:
+        consumer:
+          configuration:
+            value.deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
+            schema.registry.url: http://localhost:8081
   bindings:
     eventProcessor-in-0:
       destination: pcfleischer.eventbroker.event_source
